--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
           placeholder="https://example.com"
           required
         />
-        <input type="checkbox" name="subscribe" checked /> CheckBox
-        <input type="radio" name="gender" value="male" /> Male
-        <input type="radio" name="gender" value="female" /> Female
+        <span>CheckBox</span>
+        <input type="checkbox" name="subscribe" checked />
+        <label for="male">Male</label>
+        <input type="radio" name="gender" value="male" />
+        <label for="female">Female</label>
+        <input type="radio" name="gender" value="female" />
         <textarea
           name="message"
           rows="4"
@@ -59,13 +62,20 @@
         <input type="file" name="file-upload" required />
         <input type="color" name="color" value="#ff0000" />
         <input type="range" name="volume" min="0" max="100" value="50" />
-        <input type="search" name="search" placeholder="Search..." />
+        <input type="search" name="search" placeholder="Search..." required />
         <label for="image">Select an image:</label>
-        <input type="file" id="image" name="image" accept="image/*" />
+        <input type="file" id="image" name="image" accept="image/*" required />
         <label for="zipFile">Select a ZIP file:</label>
         <input type="file" id="zipFile" name="zipFile" accept=".zip" />
         <label for="videoFile">Select a video file:</label>
-        <input type="file" id="videoFile" name="videoFile" accept="video/*" />
+        <!-- <input
+          type="file"
+          accept="video/*"
+          id="videoInput"
+          onchange="loadVideo()"
+        />-->
+        <label for="recorder">Capture user</label>
+        <input type="file" accept="video/*" capture="camera" id="recorder" />
         <input type="submit" name="submit" id="" />
       </form>
     </div>
